# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Makefile  main.py  pylintrc.txt  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_example.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: example.py
